<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="18dp"
    android:background="#eff3ff"
    android:orientation="vertical"
    tools:context=".Fragments.SignInFragment">
    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        android:textColor="#84868a"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/johndoe_gmail_com"
        android:padding="12dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_text_bg"
        android:autofillHints="@string/johndoe_gmail_com" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="16sp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="8dp"
        android:textColor="#84868a"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundMode="none"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#2541fb"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberPassword"
            android:padding="12dp"
            android:text="@string/_1234567890"
            android:background="@drawable/edit_text_bg"

            />

    </com.google.android.material.textfield.TextInputLayout>




    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:background="@drawable/btn_bg"/>

</LinearLayout>