<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        android:src="@drawable/news_logo"
        android:contentDescription="@string/logo"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="12dp"
        android:text="@string/news_block"
        android:textColor="#2541fb"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="40dp"
        android:text="@string/everything_you_want_to_know"
        android:textColor="#424242"
        android:textSize="16sp"
        />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@drawable/vie_bg"
        app:tabIndicatorAnimationMode="linear"
        app:tabIndicatorGravity="top"
        app:tabMode="fixed"
        app:tabSelectedTextColor="#2541fb"
        app:tabTextAppearance="@style/MyCustomTabText"
        app:tabTextColor="#929fdc" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager_2"
        android:layout_width="match_parent"
        android:layout_height="405dp" />

</LinearLayout>